<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecitationActivity">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/uploadProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:showAnimationBehavior="inward"
        app:trackThickness="4dp"
        app:trackColor="@color/colorPrimaryDark"
        app:trackCornerRadius="1dp"/>

    <RelativeLayout
        android:id="@+id/verses"
        android:layout_width="342dp"
        android:layout_height="540dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/mic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">


        <TextView
            android:id="@+id/verse_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/verse_1"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/ayat_marginTop"
            android:layout_marginEnd="@dimen/ayat_marginEnd"
            android:fontFamily="@font/al_majeed_ar"
            android:minWidth="@dimen/ayaat_width"
            android:minHeight="@dimen/ayaat_height"
            android:text="@string/surah_ikhlas_2"
            android:textSize="@dimen/ayat_size" />

        <TextView
            android:id="@+id/bismillah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/ayat_marginTop"
            android:layout_marginEnd="@dimen/ayat_marginEnd"
            android:fontFamily="@font/al_majeed_ar"
            android:minWidth="@dimen/ayaat_width"
            android:minHeight="@dimen/ayaat_height"
            android:text="@string/bismillah"
            android:textSize="@dimen/ayat_size" />

        <TextView
            android:id="@+id/verse_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bismillah"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/ayat_marginTop"
            android:layout_marginEnd="@dimen/ayat_marginEnd"
            android:fontFamily="@font/al_majeed_ar"
            android:minWidth="@dimen/ayaat_width"
            android:minHeight="@dimen/ayaat_height"
            android:text="@string/surah_ikhlas_1"
            android:textSize="@dimen/ayat_size" />

        <TextView
            android:id="@+id/verse_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/verse_3"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/ayat_marginTop"
            android:layout_marginEnd="@dimen/ayat_marginEnd"
            android:fontFamily="@font/al_majeed_ar"
            android:minWidth="@dimen/ayaat_width"
            android:minHeight="@dimen/ayaat_height"
            android:text="@string/surah_ikhlas_4"
            android:textSize="@dimen/ayat_size" />

        <TextView
            android:id="@+id/verse_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/verse_4"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/ayat_marginTop"
            android:layout_marginEnd="@dimen/ayat_marginEnd"
            android:fontFamily="@font/al_majeed_ar"
            android:minWidth="@dimen/ayaat_width"
            android:minHeight="@dimen/ayaat_height"
            android:text=""
            android:textSize="@dimen/ayat_size" />

        <TextView
            android:id="@+id/verse_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/verse_5"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/ayat_marginTop"
            android:layout_marginEnd="@dimen/ayat_marginEnd"
            android:fontFamily="@font/al_majeed_ar"
            android:minWidth="@dimen/ayaat_width"
            android:minHeight="@dimen/ayaat_height"
            android:text=""
            android:textSize="@dimen/ayat_size" />

        <TextView
            android:id="@+id/verse_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/verse_6"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/ayat_marginTop"
            android:layout_marginEnd="@dimen/ayat_marginEnd"
            android:fontFamily="@font/al_majeed_ar"
            android:minWidth="@dimen/ayaat_width"
            android:minHeight="@dimen/ayaat_height"
            android:text=""
            android:textSize="@dimen/ayat_size" />

        <TextView
            android:id="@+id/verse_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/verse_7"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/ayat_marginTop"
            android:layout_marginEnd="@dimen/ayat_marginEnd"
            android:fontFamily="@font/al_majeed_ar"
            android:minWidth="@dimen/ayaat_width"
            android:minHeight="@dimen/ayaat_height"
            android:text=""
            android:textSize="@dimen/ayat_size" />

        <TextView
            android:id="@+id/verse_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/verse_2"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/ayat_marginTop"
            android:layout_marginEnd="@dimen/ayat_marginEnd"
            android:fontFamily="@font/al_majeed_ar"
            android:minWidth="@dimen/ayaat_width"
            android:minHeight="@dimen/ayaat_height"
            android:text="@string/surah_ikhlas_3"
            android:textSize="@dimen/ayat_size" />

    </RelativeLayout>


    <Button
        android:id="@+id/mic"
        android:layout_width="wrap_content"
        android:layout_height="92dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/button"
        android:contentDescription="@string/microphone"
        android:drawableTop="@drawable/ic_baseline_mic_24"
        android:paddingTop="8dp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verses" />

    <ImageButton
        android:id="@+id/toggleVisibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/hide"
        android:minWidth="50dp"
        android:minHeight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mic"
        app:srcCompat="@drawable/baseline_remove_red_eye_24" />


</androidx.constraintlayout.widget.ConstraintLayout>