<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <View
            android:id="@+id/view2"
            android:layout_width="211dp"
            android:layout_height="175dp"
            android:layout_marginEnd="200dp"
            android:layout_marginBottom="556dp"
            android:foreground="@drawable/shapeart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="NotSibling" />

        <RelativeLayout
            android:id="@+id/form"
            android:layout_width="345dp"
            android:layout_height="610dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            app:layout_constraintVertical_bias="0.5">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="146dp"
                android:layout_height="57dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="45dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
                android:layout_width="@dimen/form_size_layout_width"
                android:layout_height="@dimen/form_size_layout_length"
                android:layout_below="@id/textView2"
                android:layout_centerInParent="true"
                android:layout_marginTop="60dp"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_baseline_account_circle_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="@dimen/form_size_width"
                    android:layout_height="@dimen/form_size_length"
                    android:hint="@string/email"
                    android:textColorHint="#616161" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="@dimen/form_size_layout_width"
                android:layout_height="@dimen/form_size_layout_length"
                android:layout_below="@+id/emailLayout"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@android:drawable/ic_lock_idle_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="@dimen/form_size_width"
                    android:layout_height="@dimen/form_size_length"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="#616161" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/loginButton"
                android:layout_width="59dp"
                android:layout_height="70dp"
                android:layout_below="@id/passwordLayout"
                android:layout_marginTop="20dp"
                android:background="@drawable/circle_btn"
                android:clickable="true"
                android:contentDescription="@string/sign_in"
                android:layoutDirection="locale"
                android:minHeight="48dp"
                android:rotation="90"
                android:translationX="255dp"
                app:srcCompat="@drawable/ic_baseline_arrow_circle_up_36"

                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:drawable/dark_header"
                android:backgroundTint="#FFFFFF"
                android:translationY="450dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/sign_in_q"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/sign_in_q"
                android:textColor="@color/white"
                android:translationX="20dp"
                android:translationY="480dp" />

            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/sign_up"
                android:textColor="@color/ellipse_1_color"
                android:translationX="250dp"
                android:translationY="470dp" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>